--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
 <!-- bower:js -->
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/angular/angular.js"></script>
+      <script src='../bower_components/angular-mocks/angular-mocks.js'></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.js"></script>
 <script src="../bower_components/angular-resource/angular-resource.js"></script>
